--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@
             crossorigin="anonymous"
         />
         <!-- Favicon Code Taken from w3schools -->
-        <link rel="icon" type="image/x-icon" href="../resources/img/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="../resources/css/style.css">
+        <link rel="icon" type="image/x-icon" href="./resources/img/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     </head>
     <body>
         <script
@@ -35,28 +35,22 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="../views/home.html">Josiah Shehata</a>
+                <a class="navbar-brand" href="./views/home.html">Josiah Shehata</a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link" href="../views/hobbies.html">Hobbies</a>
+                        <a class="nav-link" href="./views/hobbies.html">Hobbies</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="../views/resume.html">Resume</a>
+                        <a class="nav-link" href="./views/resume.html">Resume</a>
                         </li>
                         <li class="nav-item dropdown">
                         <li class="nav-item">
-                        <a class="nav-link" href="../views/projects.html">Projects</a>
+                        <a class="nav-link" href="./views/projects.html">Projects</a>
                         </li>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
                     </ul>
                 </div>
-                <img src="../resources/img/sad-face.png" width="25" height = "25"></a>
+                <img src="./resources/img/sad-face.png" width="25" height = "25"></a>
             </div>
         </nav>
         <!-- Cards: Skeleton Taken from Bootstrap -->
@@ -72,7 +66,7 @@
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-sm-5">
-                                <img src="../resources/img/img9.png" class="img-pics">
+                                <img src="./resources/img/img9.png" class="img-pics">
                             </div>
                             <div class="col-sm-7">
                                 <p class="projects">
@@ -95,7 +89,7 @@
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-sm-5">
-                                <img src="../resources/img/img10.jpg" class="img-pics">
+                                <img src="./resources/img/img10.jpg" class="img-pics">
                             </div>
                             <div class="col-sm-7">
                                 <p class="projects">
@@ -119,7 +113,7 @@
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-sm-5">
-                                <img src="../resources/img/img11.svg" class="img-pics">
+                                <img src="./resources/img/img11.svg" class="img-pics">
                             </div>
                             <div class="col-sm-7">
                                 <p class="projects">
@@ -136,17 +130,17 @@
         <!-- Footer: Taken from Bootstrap -->
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="../views/home.html" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="../views/hobbies.html" class="nav-link px-2 text-muted">Hobbies</a></li>
-                <li class="nav-item"><a href="../views/resume.html" class="nav-link px-2 text-muted">Resume</a></li>
-                <li class="nav-item"><a href="../views/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
+                <li class="nav-item"><a href="./views/home.html" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="./views/hobbies.html" class="nav-link px-2 text-muted">Hobbies</a></li>
+                <li class="nav-item"><a href="./views/resume.html" class="nav-link px-2 text-muted">Resume</a></li>
+                <li class="nav-item"><a href="./views/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
             </ul>
             <!-- Icon Images Taken from Flaticon -->
             <ul class="nav col-md-12 justify-content-center list-unstyled d-flex">
                 <li class="ms-3">Josiah Shehata</li>
-                <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josiah-shehata-5a059531a/"><img src="../resources/img/img4.png" width="24" height="24"></use></svg></a></li>
-                <li class="ms-3"><a class="text-muted" href="https://github.com/jshehata7"><img src ="../resources/img/img5.png" width="24" height="24"></a></li>                
-                <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/therealasianpharaoh/"><img src ="../resources/img/img3.png" width="24" height="24"></a></li>
+                <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josiah-shehata-5a059531a/"><img src="./resources/img/img4.png" width="24" height="24"></use></svg></a></li>
+                <li class="ms-3"><a class="text-muted" href="https://github.com/jshehata7"><img src ="./resources/img/img5.png" width="24" height="24"></a></li>                
+                <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/therealasianpharaoh/"><img src ="./resources/img/img3.png" width="24" height="24"></a></li>
             </ul>
         </footer>
     </body>
