--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="./views/home.html">Josiah Shehata</a>
+                <a class="navbar-brand" href="./views/index.html">Josiah Shehata</a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -267,7 +267,7 @@
         <!-- Footer: Taken from Bootstrap -->
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="./views/home.html" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="./views/index.html" class="nav-link px-2 text-muted">Index</a></li>
                 <li class="nav-item"><a href="./views/hobbies.html" class="nav-link px-2 text-muted">Hobbies</a></li>
                 <li class="nav-item"><a href="./views/resume.html" class="nav-link px-2 text-muted">Resume</a></li>
                 <li class="nav-item"><a href="./views/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
