--- a/projects.html
+++ b/projects.html
@@ -35,18 +35,18 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="./views/index.html">Josiah Shehata</a>
+                <a class="navbar-brand" href="./index.html">Josiah Shehata</a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link" href="./views/hobbies.html">Hobbies</a>
+                        <a class="nav-link" href="./hobbies.html">Hobbies</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./views/resume.html">Resume</a>
+                        <a class="nav-link" href="./resume.html">Resume</a>
                         </li>
                         <li class="nav-item dropdown">
                         <li class="nav-item">
-                        <a class="nav-link" href="./views/projects.html">Projects</a>
+                        <a class="nav-link" href="./projects.html">Projects</a>
                         </li>
                     </ul>
                 </div>
@@ -130,10 +130,10 @@
         <!-- Footer: Taken from Bootstrap -->
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="./views/index.html" class="nav-link px-2 text-muted">Index</a></li>
-                <li class="nav-item"><a href="./views/hobbies.html" class="nav-link px-2 text-muted">Hobbies</a></li>
-                <li class="nav-item"><a href="./views/resume.html" class="nav-link px-2 text-muted">Resume</a></li>
-                <li class="nav-item"><a href="./views/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Index</a></li>
+                <li class="nav-item"><a href="./hobbies.html" class="nav-link px-2 text-muted">Hobbies</a></li>
+                <li class="nav-item"><a href="./resume.html" class="nav-link px-2 text-muted">Resume</a></li>
+                <li class="nav-item"><a href="./projects.html" class="nav-link px-2 text-muted">Projects</a></li>
             </ul>
             <!-- Icon Images Taken from Flaticon -->
             <ul class="nav col-md-12 justify-content-center list-unstyled d-flex">
